refactor: add findByUser method to ProcessedVisitJdbcService and VisitJdbcService